# RouterAI_module

./: .env.example  .gitignore  README.md  presentation.md  pyproject.toml
smartroute/: classifier.py  database.py  main.py  models.py  models_config.py  readme.md  schemas.py  security.py  settings.py  utils.py
smartroute/ai_models/: chat_model_initializer.py
smartroute/models/: chat_model_initializer.py
smartroute/routers/: auth.py  invoke.py  invoke_endpoint.py
tests/: conftest.py  test_invoke.py  test_main.py
